Fix the flex wrap for team page

--- a/styling-phuoc.css
+++ b/styling-phuoc.css
@@ -42,6 +42,7 @@
     list-style-type: none;
     display: flex;
     align-items: baseline;
+    flex-wrap: wrap;
 }
 
 .skill-list li{
